<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/term_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/search_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:imeOptions="actionSearch"
        android:inputType="textNoSuggestions"
        android:selectAllOnFocus="true"
        tools:text="Loki"/>
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/last_visit_label"
      android:layout_margin="4dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/term_input_layout"
      android:layout_width="match_parent"
      tools:text="Last Visit: 4 hours ago"
      android:layout_height="wrap_content"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scrollbars="vertical"
      app:layoutManager="LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/last_visit_label"/>

  <ProgressBar
      android:visibility="gone"
      android:id="@+id/progress_bar"
      style="?android:attr/progressBarStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>

  <Button
      android:visibility="gone"
      android:id="@+id/retry_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/retry"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>

  <TextView android:id="@+id/emptyList"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:gravity="center"
      android:text="@string/empty"
      android:textAppearance="?textAppearanceSearchResultTitle"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>